# PimVIBack

./: .gitignore  Dockefile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
pim_vi/: __init__.py
pim_vi/controller/: __init__.py  product_controller.py  sales_controller.py  user_controller.py
pim_vi/model/: __init__.py  product_model.py  sale_model.py  user_model.py
prisma/: schema.prisma
tests/: conftest.py  test_main.py
